2018-06-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_getsrclines.c (read_srclines): Sanity check ndirs and nfiles.

2018-06-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation_attr.c (addr_valp): Set error and return NULL
	when there is no .debug_addr section.
	(dwarf_getlocation_attr): If addr_valp returns NULL, then return -1.

2018-06-07  Mark Wielaard  <mark@klomp.org>

	* libdw_findcu.c (__libdw_intern_next_unit): Report DWARF_E_VERSION,
	not DWARF_E_INVALID_DWARF on unknown version. Set address_size and
	offset_size to 8 when unknown.

2018-06-06  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (__libdw_dieabbrev): Check DIE addr falls in cu.

2018-06-06  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation_die.c (dwarf_getlocation_die): Check offset
	falls inside cu data.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* dwarf_getsrclines.c (read_srclines): Explicitly set diridx to -1
	in case dwarf_formudata fails.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* dwarf_getaranges (dwarf_getaranges): Free new_arange if
	__libdw_findcu fails.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* dwarf_getsrclines.c (read_srclines): Define dirarray early and
	check whether or not it is equal to dirstack on exit/out before
	cleanup.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* dwarf_getalt.c (find_debug_altlink): id_path array should be 2
	larger to contain MAX_BUILD_ID_BYTES.

2018-05-31  Mark Wielaard  <mark@klomp.org>

	* libdw_find_split_unit.c (try_split_file): New function extracted
	from...
	(__libdw_find_split_unit): ... here. Try both the relative and
	absolute paths to find a .dwo file.

2018-05-30  Mark Wielaard  <mark@klomp.org>

	* libdw/dwarf_getsrclines.c (read_srclines): Change ndir and
	ndirlist to size_t. Add check to see ndirlist doesn't overflow.

2018-05-31  Mark Wielaard  <mark@klomp.org>

	* dwarf_dieoffset.c: Check die->cu != NULL. Return -1, not ~0ul
	on failure.

2018-05-29  Mark Wielaard  <mark@klomp.org>
